fixed letter spacing

--- a/src/stylesheets/components/_small-screen.scss
+++ b/src/stylesheets/components/_small-screen.scss
@@ -19,7 +19,7 @@ body {
   p {
     font-family: 'Khula';
     font-size: 14px;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.15em;
     line-height: 1;
     text-transform: uppercase;
 
